
2012-04-02: Version 1.7.17

- Added the dynamite compatibility patch (Thanks to Lars Hanisch).
- Silenced error log messages when accessing pseudo devices.
- Added a new theme: PearlHD (Thanks to Taipan @ VDRPortal).
- Added the transponder info window support for IPTV devices.

2013-02-10: Version 1.7.18

- Updated for vdr-1.7.37.
- Modified how the receiver is detached.
- Added Ukrainian translation (Thanks to Yarema aka Knedlyk).

2013-03-10: Version 1.7.19

- Updated for vdr-1.7.40.
- Updated French translation (Thanks to Bernard Jaulin).


===================================
VDR Plugin 'femon' Revision History
===================================

2013-04-01: Version 2.0.0

- Updated for vdr-2.0.0.
- Added Slovak translation (Thanks to Milan Hrala).

2014-01-10: Version 2.0.1

- Fixed a crash in SVDRP (Thanks for Lothar Englisch for reporting).
- Fixed a memory leak and issues reported by scan-build tool.

2014-01-18: Version 2.0.2

- Added initial support for CAMs.

2014-03-08: Version 2.0.3

- Added support for SAT>IP devices.

2014-03-15: Version 2.0.4

- Refactored the SAT>IP support.


===================================
VDR Plugin 'femon' Revision History
===================================

2014-03-16: Version 2.1.0

- Updated for vdr-2.1.6.

2014-05-10: Version 2.1.1

- Fixed the channel frequency value.

2015-01-10: Version 2.1.2


===================================
VDR Plugin 'femon' Revision History
===================================

2015-02-19: Version 2.2.0

- Updated for vdr-2.2.0.
- Updated CA definitions.
- Fixed the SVDRP service IP menu item (Thanks to Toerless Eckert).
- Fixed the detaching of receiver during a channel switch.

2015-04-04: Version 2.2.1

- Got rid of FEMON_DEBUG.
- Added support for tracing modes.
- Removed the 'femonclient' plugin.


===================================
VDR Plugin 'femon' Revision History
===================================

2015-XX-XX: Version 2.3.0

- Updated for vdr-2.3.1.