@@ -534,3 +534,4 @@ VDR Plugin 'femon' Revision History
 2015-XX-XX: Version 2.3.0
 
 - Updated for vdr-2.3.1.
+- Fixed frontend handling during a device switch.
